--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
       overflow-x: hidden;
       overflow: -moz-scrollbars-none;
       -ms-overflow-style: none;
+      width: 30%;
       transition: all .2s ease-out;
     }
     #store-list::-webkit-scrollbar { 
