--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       padding-right: 18px;
     }
     
-    .distanceText {
+    .hoursText {
       color: silver;
       font-family: 'open sans', arial, sans-serif;
       font-size: 1em;
