--- a/index.html
+++ b/index.html
@@ -92,6 +92,15 @@
       padding-right: 18px;
     }
 
+    .moreInfo {
+      padding-left: 3.2rem;
+      width: 22px;
+      height: 22px;
+      margin-top: -60px;
+      left: 83%;
+      position: relative;
+    }
+
     .container {
       display: flex;
       width: 100%;
