--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
       margin-block-start: 0.25em;
       padding-left: 3.2rem;
       padding-right: 18px;
+      display: none;
     }
 
     .moreInfo {
       padding-left: 3.2rem;
       width: 22px;
       height: 22px;
-      margin-top: -60px;
+      margin-top: -22px;
       left: 83%;
       position: relative;
     }
@@ -116,7 +117,9 @@
       <div id="pac-card">
         <div id="pac-input"></div>
       </div>
-      <div id="store-list"></div>
+      <div id="store-list">
+        <div id="list"></div>
+      </div>
     </div>
     <div id="map" style="width: 70%"></div>
   </div>
