--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <div class="container">
     <div id="panel" style="width: 30%">
       <div id="pac-card">
-        <div id="pac-input"></div>
+        <input id="pac-input" placeholder="Find a store" type="text">
       </div>
       <div id="store-list">
         <div id="list"></div>
